# Project_FastAPI

./: .pre-commit-config.yaml  pyproject.toml
src/: app.py  requirements.txt
src/controllers/: user.py
src/models/: user.py
src/scheme/: user.py
src/store/: base.py  user_repo.py
